[package]
name = "fs-store"
version = "0.1.0"
author = "Nikola Anicic <anicicn84@gmail.com>"
edition = "2018"



# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.2.4"
parking_lot = "0.11.0"
serde = { version = "1.0.123", features = ["derive"] }
tokio = { version = "0.2.*", features = ["full"] }
structopt = "0.3.13"
uuid = { version = "0.8", features = ["v4"] }
futures = { version = "0.3.13", default-features = false }
bytes = "0.5.5"