[package]
name = "fs-store"
version = "0.1.0"
author = "Nikola Anicic <anicicn84@gmail.com>"
edition = "2018"

[[bin]]
name="server"

[[bin]]
name="fs_store"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.3.1"
#parking_lot = "0.11.0"
serde = { version = "1.0.123", features = ["derive"] }
tokio = { version = "1.9.*", features = ["full"] }
tokio-stream = {version = "0.1.7", features = ["fs"] }
structopt = "0.3.13"
futures = { version = "0.3.13", default-features = false }
env_logger = "0.9.0"
log = "0.4"
reqwest = { version = "0.11", features = ["blocking"] }